--- a/index.html
+++ b/index.html
@@ -1,9 +1,5 @@
 <!DOCTYPE HTML>
-<!--
-	Prologue by HTML5 UP
-	html5up.net | @ajlkn
-	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
--->
+
 <html>
 	<head>
 		<title>Sam O'Neill</title>
@@ -42,8 +38,8 @@
 
 					<!-- Social Icons -->
 						<ul class="icons">
-							<li><a href="#" class="icon brands fa-github"><span class="label">Github</span></a></li>
-							<li><a href="#" class="fab fa-linkedin"><span class="label"></span></a></li>
+							<li><a href="https://github.com/samueloneill" class="icon brands fa-github"><span class="label">Github</span></a></li>
+							<li><a href="https://www.linkedin.com/in/sam-oneill-98a484222/" class="fab fa-linkedin"><span class="label"></span></a></li>
 						</ul>
 
 				</div>
@@ -80,53 +76,57 @@
 								<h2>Portfolio</h2>
 							</header>
 
-							<p>Vitae natoque dictum etiam semper magnis enim feugiat convallis convallis
-							egestas rhoncus ridiculus in quis risus amet curabitur tempor orci penatibus.
-							Tellus erat mauris ipsum fermentum etiam vivamus eget. Nunc nibh morbi quis
-							fusce hendrerit lacus ridiculus.</p>
+							<p>Here you can check out my previous work and explore the code on GitHub. I have <br />
+								various projects in C, Python, Arduino, VHDL and more.</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic02.jpg" alt="" /></a>
+										<a href="https://github.com/samueloneill/sensclock" class="image fit"><img src="images/sensclock.png" alt="" /></a>
 										<header>
-											<h3>Ipsum Feugiat</h3>
+											<h3 id="title">SensClock</h3>
+											<p>A  sensory alarm clock and daily organiser for children with autism.</p>
 										</header>
 									</article>
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic03.jpg" alt="" /></a>
+										<a href="https://github.com/samueloneill/steeldefects" class="image fit"><img src="images/steelplates.png" alt="" /></a>
 										<header>
-											<h3>Rhoncus Semper</h3>
+											<h3 id="title">Steel defect classification system</h3>
+											<p>A machine-learning model for classifying production defects in steel plates</p>
 										</header>
 									</article>
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic04.jpg" alt="" /></a>
+										<a href="https://github.com/samueloneill/skateteacher" class="image fit"><img src="images/Tracker.png" alt="" /></a>
 										<header>
-											<h3>Magna Nullam</h3>
+											<h3 id="title">Skate Teacher</h3>
+											<p>A movement tracking device to help skateboarders learn new tricks</p>
 										</header>
 									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic05.jpg" alt="" /></a>
+									<!-- <article class="item">
+										<a href="#" class="image fit"><img src="images/github.png" alt="" /></a>
 										<header>
-											<h3>Natoque Vitae</h3>
+											<h3 id="title">Line following robot</h3>
+											<p>Autonomous line following robot developed using a PIC microcontroller</p>
 										</header>
-									</article>
+									</article> -->
 								</div>
 								<div class="col-4 col-12-mobile">
 									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic06.jpg" alt="" /></a>
+										<a href="https://github.com/samueloneill/modulator" class="image fit"><img src="images/basys3.png" alt="" /></a>
 										<header>
-											<h3>Dolor Penatibus</h3>
+											<h3 id="title">VHDL Modulation System</h3>
+											<p>A digital signal generator, modulator and demodulator in VHDL</p>
 										</header>
 									</article>
-									<article class="item">
-										<a href="#" class="image fit"><img src="images/pic07.jpg" alt="" /></a>
+									<!-- <article class="item">
+										<a href="#" class="image fit"><img src="images/github.png" alt="" /></a>
 										<header>
-											<h3>Orci Convallis</h3>
+											<h3 id="title">Email round-up client</h3>
+											<p>A client for displaying weekly round-up emails from a blog site</p>
 										</header>
-									</article>
+									</article> -->
 								</div>
 							</div>
 
@@ -141,14 +141,16 @@
 								<h2>About Me</h2>
 							</header>
 
-							<a href="#" class="image featured"><img src="images/pic08.jpg" alt="" /></a>
+							<a href="#" class="image featured"><img src="images/portsmouth.png" alt="" /></a>
 
-							<p>Tincidunt eu elit diam magnis pretium accumsan etiam id urna. Ridiculus
-							ultricies curae quis et rhoncus velit. Lobortis elementum aliquet nec vitae
-							laoreet eget cubilia quam non etiam odio tincidunt montes. Elementum sem
-							parturient nulla quam placerat viverra mauris non cum elit tempus ullamcorper
-							dolor. Libero rutrum ut lacinia donec curae mus vel quisque sociis nec
-							ornare iaculis.</p>
+							<p>I have had a strong interest in electronics since my early teens, which was the reason behind my 
+								choice to study electronic engineering at university. I studied at the University of Portsmouth, 
+								and graduated in 2021 with a 2:1 Bachelor's degree.<br />
+								In my time at university I discovered a passion for product design through individual and group
+								design projects. While I specialise in embedded software development, I enjoy spending time working
+								on any part of a project from conception, to design, to implementation. Coming up with new ideas 
+								and bringing them to reality is my passion.
+							</p>
 
 						</div>
 					</section>
@@ -160,13 +162,7 @@
 							<header>
 								<h2>Contact</h2>
 							</header>
-
-							<p>Elementum sem parturient nulla quam placerat viverra
-							mauris non cum elit tempus ullamcorper dolor. Libero rutrum ut lacinia
-							donec curae mus. Eleifend id porttitor ac ultricies lobortis sem nunc
-							orci ridiculus faucibus a consectetur. Porttitor curae mauris urna mi dolor.</p>
-
-							<form method="post" action="#">
+							<form method="post" action="https://formspree.io/f/xeqvyqgp">
 								<div class="row">
 									<div class="col-6 col-12-mobile"><input type="text" name="name" placeholder="Name" /></div>
 									<div class="col-6 col-12-mobile"><input type="text" name="email" placeholder="Email" /></div>
@@ -186,12 +182,6 @@
 
 		<!-- Footer -->
 			<div id="footer">
-
-				<!-- Copyright -->
-					<ul class="copyright">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
-					</ul>
-
 			</div>
 
 		<!-- Scripts -->
