--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
 							</header>
 
 							<p>Here you can check out my previous work and explore the code on GitHub. I have <br />
-								various projects in C, Python, Arduino, VHDL and more.</p>
+								various projects in C, Python, Arduino, VHDL and more. Click on a project to view it's GitHub repository</p>
 
 							<div class="row">
 								<div class="col-4 col-12-mobile">
